fixed mobile overflow on details page

--- a/src/App.css
+++ b/src/App.css
@@ -139,19 +139,21 @@ ul {
   height: 100%;
   font-size: 1.25rem;
 }
+.detailsBottom {
+  min-height: 68vh;
+}
 .detailsNav {
   height: fit-content;
   max-width: 1000px;
 }
 .details {
-  padding: 1.5rem 0 0 0;
-  overflow: hidden;
+  overflow: auto;
   height: 100vh;
   max-height: 100vh;
 }
 .flavor-text {
   margin-top: 0.5rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 .detailsBall {
   width: 70%;
@@ -167,6 +169,9 @@ ul {
 .details-bottom-wrapper {
   max-width: 800px;
   margin: 0 auto;
+}
+.details-back-btn {
+  color: white;
 }
 .details-image {
   position: absolute;
@@ -186,6 +191,9 @@ ul {
   height: fit-content;
   display: flex;
 }
+.details-item {
+  min-height: 100%;
+}
 .details-item p {
   font-size: 0.75rem;
   color: #666666;
@@ -196,12 +204,14 @@ ul {
   border-right: 1px solid gray;
 }
 .details-stats {
-  margin-bottom: 2rem;
-  max-height: 100%;
+  margin-bottom: 1rem;
+  max-height: 300px;
+  height: 40%;
 }
 .details-stats h3 {
   height: fit-content;
 }
+
 .stat-item-name {
   max-width: 75px;
   padding-right: 1rem;
